The Samba-Bugzilla – Bug 13519
LDB 1.4.0 breaks Samba < 4.9
Last modified: 2018-08-14 11:04:21 UTC
Samba 4.9 introduces ldb 1.4.0 which requires that a new LDB is opened after each fork(), rather than just that the caller has called tdb_reopen_all(). This is to make the behaviour of LMDB the same as TDB. Only Samba 4.9 has this behaviour, so Samba 4.8 and earlier are incompatible with ldb 1.4 and above.
Created attachment 14336 [details] patch for Samba 4.8 This changes the 'samba' part of the ldb wscript to refuse to build against the wrong (newer) version of ldb from the system.
This patch also applies to Samba 4.7
This should go in the next 4.7 and 4.8! thanks.
Pushed to autobuild-v4-{8,7}-test.
(In reply to Karolin Seeger from comment #4) Pushed to both branches. Closing out bug report. Thanks!